# dts-offline

./: README.md  inference_example.py  pyproject.toml
Example/: Example-DeepSeek_R1_Distill_Qwen_1_5B.ipynb
configs/: config.yaml
decoding_tree_sketching/: kvbatch_decoder.py  run_experiments.py
decoding_tree_sketching/utils/: eval_utils.py
main/: aime24_1.5B_decoder.py  aime24_1.5B_normal.py  aime24_repeat_decoder.py  aime24_repeat_normal.py  aime25_1.5B_decoder.py  aime25_1.5B_normal.py  aime25_repeat_decoder.py  aime25_repeat_normal.py  kvbatch_decoder.py
notebooks/: README.md  example_DeepSeek_R1_Distill_Qwen_1_5B.ipynb
prelim/: getans.py
scripts/: run_all_dts.sh  run_all_std.sh
